Fix pages stretched when window narrower than images

--- a/mangaread2/style/images.css
+++ b/mangaread2/style/images.css
@@ -17,6 +17,8 @@
         width: 100%;
         border: 1px solid var(--borders);
         user-select: none;
+        object-fit: contain;
+        height: auto;
     }
 }
 
